sidebar layout designing

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"lucide-svelte": "^0.452.0"
+		"lucide-svelte": "^0.452.0",
+		"powerbi-client": "^2.23.1"
 	}
 }
