--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.7.7",
 		"lucide-svelte": "^0.452.0",
+		"mongodb": "^6.9.0",
 		"powerbi-client": "^2.23.1"
 	}
 }
